--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        os: [windows-latest, ubuntu-latest]
         qt-version: [5.15.2, 5.12.10]
         build-system: [qmake, cmake]
         exclude:
@@ -191,40 +191,40 @@ jobs:
           path: build/Chatterino.deb
 
       # MACOS
-      - name: Install dependencies (MacOS)
-        if: startsWith(matrix.os, 'macos')
-        run: |
-            brew install boost openssl rapidjson p7zip create-dmg cmake tree
-        shell: bash
+      #- name: Install dependencies (MacOS)
+       # if: startsWith(matrix.os, 'macos')
+       # run: |
+       #     brew install boost openssl rapidjson p7zip create-dmg cmake tree
+       # shell: bash
 
-      - name: Build with CMake (MacOS)
-        if: startsWith(matrix.os, 'macos') && matrix.build-system == 'cmake'
-        run: |
-            mkdir build
-            cd build
-            cmake \
-                -DCMAKE_BUILD_TYPE=Release \
-                -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl \
-                ..
-            make -j8
-        shell: bash
+      #- name: Build with CMake (MacOS)
+       # if: startsWith(matrix.os, 'macos') && matrix.build-system == 'cmake'
+       # run: |
+       #     mkdir build
+       #     cd build
+       #     cmake \
+       #         -DCMAKE_BUILD_TYPE=Release \
+       #         -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl \
+       #         ..
+       #     make -j8
+       # shell: bash
 
-      - name: Package (MacOS)
-        if: startsWith(matrix.os, 'macos')
-        run: |
-            ls -la
-            pwd
-            ls -la build || true
-            cd build
-            sh ./../.CI/CreateDMG.sh
-        shell: bash
+      #- name: Package (MacOS)
+      #  if: startsWith(matrix.os, 'macos')
+      #  run: |
+      #      ls -la
+      #      pwd
+      #      ls -la build || true
+      #      cd build
+      #      sh ./../.CI/CreateDMG.sh
+      #  shell: bash
 
-      - name: Upload artifact (MacOS)
-        if: startsWith(matrix.os, 'macos')
-        uses: actions/upload-artifact@v2.2.4
-        with:
-          name: chatterino-osx-${{ matrix.qt-version }}-${{ matrix.build-system }}.dmg
-          path: build/chatterino-osx.dmg
+      #- name: Upload artifact (MacOS)
+      #  if: startsWith(matrix.os, 'macos')
+      #  uses: actions/upload-artifact@v2.2.4
+      #  with:
+      #    name: chatterino-osx-${{ matrix.qt-version }}-${{ matrix.build-system }}.dmg
+      #    path: build/chatterino-osx.dmg 
 
   create-release:
     needs: build
